--- a/code/src/index.css
+++ b/code/src/index.css
@@ -2,7 +2,14 @@
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box; 
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
 }
+
+body {
+  background-color: #000;
+}
+
+/*MOVIE LIST/HOME PAGE*/
 
 .main-container {
   display: flex;
@@ -17,21 +24,20 @@
   flex-direction: column;
   justify-content: flex-end;
   position: relative;
+  margin: 0;
+  width: 100%;
 }
 
 
 .image {
   object-fit: cover;
-  max-width: 100%;
-  height: 400px;
+  width: 100%;
 }
 
 .image-details {
   position: absolute;
   padding: 16px;
   color: #fff;
-  font-size: 17px;
-  font-weight: bold;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -43,14 +49,16 @@
 }
 
 .released-date {
-  font-size: 17px;
+  font-size: 16px;
   padding-top: 12px;
   font-weight: normal;
   margin: 0;
 }
 
-.movie-title {
+.title {
   margin: 0;
+  font-size: 32px;
+  font-weight: bold;
 }
 
 /*HOVER EFFECTS*/
@@ -60,3 +68,113 @@
 }
 
 /*MOVIE DETAILS PAGE*/
+
+.details-page-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
+.details-container{
+  position: absolute;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+}
+
+.background-movie-poster {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+
+.small-movie-poster {
+  max-width: 230px;
+  margin: 0;
+  border: 3px solid #fff;
+}
+
+.title-rating-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0;
+  width: 100%;
+}
+
+.title-rating-overwiev-container {
+  max-width: 300px;
+}
+
+.movie-title {
+  font-size: 20px;
+  padding-right: 15px;
+  margin: 0;
+}
+
+.rating {
+  font-size: 16px;
+  color: rgb(250, 4, 4);
+}
+
+.overview {
+  font-size: 14px;
+  font-weight: normal;
+  text-align: justify;
+  padding-top: 20px;
+}
+
+/*MEDIA QUERIES*/
+/*Tablet*/
+@media (min-width: 667px) {
+/*MOVIE LIST/HOME PAGE*/
+
+.main-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.movie-card {
+  width: 50%;
+}
+
+.title {
+  font-size: 26px;
+}
+
+/*MOVIE DETAILS PAGE*/
+  .details-container{
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-start;
+    max-width: 800px;
+  }
+
+  .small-movie-poster {
+    max-width: 400px;
+    margin: 30px;
+  }
+
+  .movie-title {
+    font-size: 24px;
+  }
+
+  .rating {
+    font-size: 20px;
+  }
+
+  .title-rating-overwiev-container {
+    padding-bottom: 50px;
+  }
+}
